# xsimd-example

./: CMakeLists.txt
test/: CMakeLists.txt  test_xsimd.cpp
